# F1Tech

./: .bashrc  .gitignore  .gitmodules  README.md
CAD/: Part1.SLDPRT  Platform_Deck_V3.SLDPRT  Platform_Deck_current.SLDPRT  Test.SLDPRT  Vesc_drawing.SLDPRT
cartographer_ws/build_isolated/: catkin_make_isolated.cache
cartographer_ws/build_isolated/cartographer_ros/: .ninja_deps  .ninja_log  AllFiles.cmake  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
cartographer_ws/build_isolated/cartographer_ros_msgs/: .ninja_log  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
cartographer_ws/build_isolated/cartographer_rviz/: .ninja_deps  .ninja_log  AllFiles.cmake  build.ninja  (+6 more)
cartographer_ws/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
cartographer_ws/install_isolated/: .rosinstall  _setup_util.py
cartographer_ws/src/: .rosinstall  .rosinstall.bak
f1tenth_ws/: frames.gv
f1tenth_ws/devel/: .catkin  .rosinstall  local_setup.sh
f1tenth_ws/logs/: Circular_Map.csv  wp-2023-03-13-22-10-34.csv
f1tenth_ws/maps/: Circular_Map.yaml  attempt1.pgm  attempt1.yaml  attempt2.pgm  attempt2.yaml  converted_attempt2.pgm  converted_map.pgm
f1tenth_ws/src/f1tech/: CMakeLists.txt  package.xml  setup.cfg  setup.py
f1tenth_ws/src/f1tech/f1tech/: ReactiveNodeBase.py  reactive_node.py  reactive_node_new.py
f1tenth_ws/src/f1tech/src/: pure_pursuit_node.py  reactive_node.py  rrt.py  safety_node.py  wf_node.py
(+450 files in other folders)
